Fix #1834: Revise symmetric signature verification functionality (#1925)